[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["hikaru7719 <j148016s@st.u-gakugei.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
